--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,43 +1,15 @@
 {
-    "Authentication:": "Authentifikation:",
-    "Cannot read file!": "Kann die Datei nicht lesen!",
-    "Chained certificate:": "Kettenzertifikat:",
-    "Drop the files here": "Die Datei hier platzieren",
-    "Empty name not allowed!": "Ohne Namen ist nicht erlaubt!",
-    "File is too big!": "Datei ist zu groß!",
-    "Let's Encrypt settings": "Einstellungen Let's Encrypt",
-    "Listen on all IPs": "An allen IP Adressen hören",
-    "Ok": "Ok",
-    "Port to check the domain:": "Port um die Domain zu prüfen:",
-    "Private certificate:": "Privatzertifikat:",
-    "Public certificate:": "Publikzertifikat:",
-    "Secure(HTTPS):": "Verschlüsselung(HTTPS):",
-    "Server settings": "Server settings",
-    "Unknown file format!": "Unbekannter Dateiformat!",
-    "Use Lets Encrypt certificates:": "Benutzen Let's Encrypt Zertifikate:",
-    "Use this instance for automatic update:": "Benutze diese Instanz für automatische Updates:",
     "connection_info": "Verbindungseinstellungen",
     "delete": "löschen",
     "enabled": "aktiviert",
-    "encryptionKey": "Passphrase zur Verschlüsselung der Benachrichtigungen",
-    "help_tip": "Beim Speichern von Einstellungen der Adapter wird sofort neu gestartet.",
-    "ip": "IP Adresse",
+    "encryptionKey": "Schlüssel zur Payload-Verschlüsselung",
+    "mqtt": "MQTT-Instanz",
     "name": "Benutzer",
-    "other_info": "Weitere Einstellungen",
-    "passRepeat": "Kennwort (Wiederholung)",
-    "password": "Kennwort",
     "picture": "Avatar",
-    "pictures_info": "Benutzer-Avatare",
-    "port": "Port",
-    "state": "State",
-    "tab_config": "Einstellungen",
-    "tab_http": "Option 1: ioBroker.cloud / iot (empfohlen)",
+    "pictures_info": "Avatare",
+    "tab_config": "Konfiguration",
     "tab_info": "Informationen",
-    "tab_mqtt": "Option 2: MQTT Server",
-    "tab_pictures": "Benutzer-Avatare",
-    "tab_setup": "Installationsanleitung",
-    "togglePassword": "Passwort zeigen / vergeben",
-    "upload": "hochladen",
-    "username": "Benutzer",
-    "webSocket": "Websockets aktivieren"
+    "tab_setup": "Setup-Anweisungen",
+    "togglePassword": "ein-/ausblenden des Passworts",
+    "upload": "hochladen"
 }
