--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,43 +1,15 @@
 {
-    "Authentication:": "",
-    "Cannot read file!": "Cannot read file!",
-    "Chained certificate:": "Chained certificate:",
-    "Drop the files here": "Drop the files here",
-    "Empty name not allowed!": "Empty name not allowed!",
-    "File is too big!": "File is too big!",
-    "Let's Encrypt settings": "Let's Encrypt settings",
-    "Listen on all IPs": "Listen on all IPs",
-    "Ok": "Ok",
-    "Port to check the domain:": "Port to check the domain:",
-    "Private certificate:": "Private certificate:",
-    "Public certificate:": "Public certificate:",
-    "Secure(HTTPS):": "",
-    "Server settings": "Server settings",
-    "Unknown file format!": "Unknown file format!",
-    "Use Lets Encrypt certificates:": "Use Let's Encrypt certificates:",
-    "Use this instance for automatic update:": "Use this instance for automatic update:",
     "connection_info": "Connection settings",
     "delete": "delete",
     "enabled": "enabled",
     "encryptionKey": "Encryption Key for Payload Encryption",
-    "help_tip": "On save the adapter restarts with new configuration immediately",
-    "ip": "IP address",
+    "mqtt": "MQTT instance",
     "name": "User",
-    "other_info": "Other Settings",
-    "passRepeat": "Password (repeat)",
-    "password": "Password",
     "picture": "Picture",
     "pictures_info": "User Pictures",
-    "port": "Port",
-    "state": "State",
     "tab_config": "Configuration",
-    "tab_http": "Option 1: ioBroker.cloud / iot (recommended)",
     "tab_info": "Information",
-    "tab_mqtt": "Option 2: MQTT Server",
-    "tab_pictures": "User Pictures",
     "tab_setup": "Setup instructions",
     "togglePassword": "show / hide password",
-    "upload": "upload",
-    "username": "User",
-    "webSocket": "Use Websockets"
+    "upload": "upload"
 }
