--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,43 +1,15 @@
 {
-    "Authentication:": "",
-    "Cannot read file!": "No se puede leer el archivo!",
-    "Chained certificate:": "Certificado encadenado:",
-    "Drop the files here": "Deja los archivos aquí",
-    "Empty name not allowed!": "Nombre vacío no permitido!",
-    "File is too big!": "¡El archivo es demasiado grande!",
-    "Let's Encrypt settings": "Vamos a cifrar la configuración",
-    "Listen on all IPs": "Escucha en todas las direcciones IP",
-    "Ok": "De acuerdo",
-    "Port to check the domain:": "Puerto para comprobar el dominio:",
-    "Private certificate:": "Certificado privado:",
-    "Public certificate:": "Certificado público:",
-    "Secure(HTTPS):": "",
-    "Server settings": "Configuración del servidor",
-    "Unknown file format!": "¡Formato de archivo desconocido!",
-    "Use Lets Encrypt certificates:": "Utilice certificados de Let's Encrypt:",
-    "Use this instance for automatic update:": "Utilice esta instancia para la actualización automática:",
-    "connection_info": "Ajustes de conexión",
-    "delete": "borrar",
+    "connection_info": "Configuración de la conexión",
+    "delete": "eliminar",
     "enabled": "habilitado",
-    "encryptionKey": "Clave de cifrado para el cifrado de carga útil",
-    "help_tip": "Al guardar el adaptador se reinicia con nueva configuración inmediatamente.",
-    "ip": "dirección IP",
+    "encryptionKey": "Clave de cifrado para la Encriptación de la Carga útil",
+    "mqtt": "MQTT instancia",
     "name": "Usuario",
-    "other_info": "Otros ajustes",
-    "passRepeat": "Repite la contraseña)",
-    "password": "Contraseña",
     "picture": "Imagen",
-    "pictures_info": "Fotos del usuario",
-    "port": "Puerto",
-    "state": "Estado",
+    "pictures_info": "Fotos De Los Usuarios",
     "tab_config": "Configuración",
-    "tab_http": "Opción 1: ioBroker.cloud / iot (recomendado)",
     "tab_info": "Información",
-    "tab_mqtt": "Opción 2: Servidor MQTT",
-    "tab_pictures": "Fotos del usuario",
-    "tab_setup": "Instrucciones de configuración",
-    "togglePassword": "mostrar / ocultar contraseña",
-    "upload": "subir",
-    "username": "Usuario",
-    "webSocket": "Utilizar websockets"
+    "tab_setup": "Instrucciones de instalación",
+    "togglePassword": "mostrar / ocultar la contraseña",
+    "upload": "subir"
 }
