--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,43 +1,15 @@
 {
-    "Authentication:": "",
-    "Cannot read file!": "Não é possível ler o arquivo!",
-    "Chained certificate:": "Certificado acorrentado:",
-    "Drop the files here": "Solte os arquivos aqui",
-    "Empty name not allowed!": "Nome vazio não permitido!",
-    "File is too big!": "O arquivo é muito grande!",
-    "Let's Encrypt settings": "Vamos criptografar configurações",
-    "Listen on all IPs": "Ouça em todos os IPs",
-    "Ok": "Está bem",
-    "Port to check the domain:": "Porta para verificar o domínio:",
-    "Private certificate:": "Certificado particular:",
-    "Public certificate:": "Certificado público:",
-    "Secure(HTTPS):": "",
-    "Server settings": "Configurações do servidor",
-    "Unknown file format!": "Formato de arquivo desconhecido!",
-    "Use Lets Encrypt certificates:": "Use Vamos Criptografar Certificados:",
-    "Use this instance for automatic update:": "Use esta instância para atualização automática:",
     "connection_info": "Configurações de conexão",
-    "delete": "excluir",
-    "enabled": "ativado",
-    "encryptionKey": "Chave de Criptografia para Criptografia de Payload",
-    "help_tip": "Ao salvar, o adaptador é reiniciado com a nova configuração imediatamente",
-    "ip": "endereço de IP",
-    "name": "Do utilizador",
-    "other_info": "Outros ajustes",
-    "passRepeat": "Senha (repetir)",
-    "password": "Senha",
-    "picture": "Cenário",
-    "pictures_info": "Fotos do Usuário",
-    "port": "Porta",
-    "state": "Estado",
+    "delete": "apagar",
+    "enabled": "habilitado",
+    "encryptionKey": "A criptografia de Chave para Criptografia de Carga útil",
+    "mqtt": "DICIONÁRIO de instância",
+    "name": "Utilizador",
+    "picture": "Imagem",
+    "pictures_info": "Fotos Do Usuário",
     "tab_config": "Configuração",
-    "tab_http": "Opção 1: ioBroker.cloud / iot (recomendado)",
-    "tab_info": "Em formação",
-    "tab_mqtt": "Opção 2: servidor MQTT",
-    "tab_pictures": "Fotos do Usuário",
-    "tab_setup": "Instruções de configuração",
-    "togglePassword": "mostrar / ocultar senha",
-    "upload": "Envio",
-    "username": "Do utilizador",
-    "webSocket": "Use Websockets"
+    "tab_info": "Informações",
+    "tab_setup": "Instruções de instalação",
+    "togglePassword": "mostrar / ocultar a senha",
+    "upload": "upload"
 }
