--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,43 +1,15 @@
 {
-    "Authentication:": "",
-    "Cannot read file!": "",
-    "Chained certificate:": "",
-    "Drop the files here": "",
-    "Empty name not allowed!": "",
-    "File is too big!": "",
-    "Let's Encrypt settings": "",
-    "Listen on all IPs": "",
-    "Ok": "",
-    "Port to check the domain:": "",
-    "Private certificate:": "",
-    "Public certificate:": "",
-    "Secure(HTTPS):": "",
-    "Server settings": "",
-    "Unknown file format!": "",
-    "Use Lets Encrypt certificates:": "",
-    "Use this instance for automatic update:": "",
-    "connection_info": "",
-    "delete": "",
-    "enabled": "",
-    "encryptionKey": "",
-    "help_tip": "",
-    "ip": "",
-    "name": "",
-    "other_info": "",
-    "passRepeat": "",
-    "password": "",
-    "picture": "",
-    "pictures_info": "",
-    "port": "",
-    "state": "",
-    "tab_config": "",
-    "tab_http": "",
-    "tab_info": "",
-    "tab_mqtt": "",
-    "tab_pictures": "",
-    "tab_setup": "",
-    "togglePassword": "",
-    "upload": "",
-    "username": "",
-    "webSocket": ""
+    "connection_info": "连接设置",
+    "delete": "删除",
+    "enabled": "启用",
+    "encryptionKey": "加密钥对于有效负荷加密",
+    "mqtt": "过实例",
+    "name": "用户",
+    "picture": "图片",
+    "pictures_info": "用户的照片",
+    "tab_config": "配置",
+    "tab_info": "的信息",
+    "tab_setup": "设置说明",
+    "togglePassword": "显示出隐藏的密码",
+    "upload": "上传"
 }
