--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,43 +1,15 @@
 {
-    "Authentication:": "Аутентификация:",
-    "Cannot read file!": "Невозможно прочитать файл!",
-    "Chained certificate:": "'Chained' сертификат:",
-    "Drop the files here": "Перетащить файлы сюда",
-    "Empty name not allowed!": "Пустое имя пользователя не разрешено!",
-    "File is too big!": "Слишком большой файл!",
-    "Let's Encrypt settings": "Настройкт Let's Encrypt",
-    "Listen on all IPs": "Открыть сокет на всех IP адресах",
-    "Ok": "Ok",
-    "Port to check the domain:": "Порт для проверки доменного имени:",
-    "Private certificate:": "'Private' сертификат:",
-    "Public certificate:": "'Public' сертификат:",
-    "Secure(HTTPS):": "Шифрование(HTTPS):",
-    "Server settings": "Настройки сервера settings",
-    "Unknown file format!": "Неизвестный формат файла",
-    "Use Lets Encrypt certificates:": "Использовать сертификаты Let's Encrypt:",
-    "Use this instance for automatic update:": "Обновлять сертификаты в этом драйвере:",
-    "connection_info": "Настройки соединения",
-    "delete": "удалять",
+    "connection_info": "Параметры подключения ",
+    "delete": "удалить",
     "enabled": "включен",
-    "encryptionKey": "Ключ шифрования для шифрования полезной нагрузки",
-    "help_tip": "Сразу после сохранения настроек драйвер перезапуститься с новыми значениями",
-    "ip": "IP",
-    "name": "пользователь",
-    "other_info": "Другие настройки",
-    "passRepeat": "Повтор пароля",
-    "password": "Пароль",
-    "picture": "Картина",
-    "pictures_info": "Картинки пользователя",
-    "port": "Порт",
-    "state": "государственный",
-    "tab_config": "конфигурация",
-    "tab_http": "Вариант 1: ioBroker.cloud / iot (рекомендуется)",
+    "encryptionKey": "Ключ шифрования для шифрования полезной нагрузки ",
+    "mqtt": "Экземпляр протоколу MQTT ",
+    "name": "Пользователь",
+    "picture": "Картинка",
+    "pictures_info": "Фотографии Пользователя ",
+    "tab_config": "Конфигурации",
     "tab_info": "Информация",
-    "tab_mqtt": "Вариант 2: MQTT-сервер",
-    "tab_pictures": "Картинки пользователя",
-    "tab_setup": "Инструкция по настройке",
-    "togglePassword": "показать / скрыть пароль",
-    "upload": "загружать",
-    "username": "Пользователь",
-    "webSocket": "Используйте веб-сокеты"
+    "tab_setup": "Инструкция по установке ",
+    "togglePassword": "Показать / Скрыть пароль",
+    "upload": "загрузить"
 }
