--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,15 +1,24 @@
 {
+    "allowClientsToDefineRegions": "Regionen aus Funktion &quot;Orte veröffentlichen&quot; beziehen",
+    "allowClientsToDefineRegionsWhitelist": "Nur von ausgewählten Clients (leer = von allen Clients beziehen)",
     "connection_info": "Verbindungseinstellungen",
+    "creation": "Erstelldatum",
     "delete": "löschen",
+    "description": "Region",
     "enabled": "aktiviert",
     "encryptionKey": "Schlüssel zur Payload-Verschlüsselung",
+    "lattitude": "Breitengrad",
+    "locations_info": "Regionseinstellungen",
+    "longitude": "Längengrad",
     "mqtt": "MQTT-Instanz",
     "name": "Benutzer",
     "picture": "Avatar",
     "pictures_info": "Avatare",
+    "publishRegionsToClients": "Regionen an Clients verteilen",
+    "radius": "Radius",
     "tab_config": "Konfiguration",
     "tab_info": "Informationen",
     "tab_setup": "Setup-Anweisungen",
-    "togglePassword": "ein-/ausblenden des Passworts",
+    "togglePassword": "ein-/ausblenden des Schlüssels",
     "upload": "hochladen"
 }
