--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Retrieve regions when functionality &quot;Publish Waypionts&quot; is used",
+    "allowClientsToDefineRegionsWhitelist": "Only retrieve from whitelisted clients (empty = retrieve from all clients)",
     "connection_info": "Connection settings",
+    "creation": "Creation date",
     "delete": "delete",
+    "description": "Description",
     "enabled": "enabled",
     "encryptionKey": "Encryption Key for Payload Encryption",
+    "lattitude": "Lattitude",
+    "locations_info": "Location settings",
+    "longitude": "Longitude",
     "mqtt": "MQTT instance",
     "name": "User",
     "picture": "Picture",
     "pictures_info": "User Pictures",
+    "publishRegionsToClients": "Broadcast regions to clients",
+    "radius": "Radius",
     "tab_config": "Configuration",
     "tab_info": "Information",
     "tab_setup": "Setup instructions",
