--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Recuperar las regiones cuando la funcionalidad de &quot;Publicar Waypionts&quot; se utiliza",
+    "allowClientsToDefineRegionsWhitelist": "Sólo recuperar de la lista blanca de los clientes (vacío = recuperar de todos los clientes)",
     "connection_info": "Configuración de la conexión",
+    "creation": "Fecha de creación",
     "delete": "eliminar",
+    "description": "Descripción",
     "enabled": "habilitado",
     "encryptionKey": "Clave de cifrado para la Encriptación de la Carga útil",
+    "lattitude": "Latitud",
+    "locations_info": "La configuración de ubicación",
+    "longitude": "Longitud",
     "mqtt": "MQTT instancia",
     "name": "Usuario",
     "picture": "Imagen",
     "pictures_info": "Fotos De Los Usuarios",
+    "publishRegionsToClients": "Difusión de las regiones a los clientes",
+    "radius": "Radio",
     "tab_config": "Configuración",
     "tab_info": "Información",
     "tab_setup": "Instrucciones de instalación",
