--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Récupérer les régions lors de la fonctionnalité de &quot;Publier Waypionts&quot; est utilisé",
+    "allowClientsToDefineRegionsWhitelist": "Seulement récupérer à partir de la liste blanche des clients (vide = récupérer à partir de tous les clients)",
     "connection_info": "Paramètres de connexion",
+    "creation": "Date de création",
     "delete": "supprimer",
+    "description": "La description",
     "enabled": "activé",
     "encryptionKey": "Clé de chiffrement pour le Chiffrement des données utiles",
+    "lattitude": "Lattitude",
+    "locations_info": "Les paramètres de localisation",
+    "longitude": "Longitude",
     "mqtt": "MQTT exemple",
     "name": "L'utilisateur",
     "picture": "Image",
     "pictures_info": "L'Utilisateur Photos",
+    "publishRegionsToClients": "La diffusion des régions pour les clients",
+    "radius": "Rayon",
     "tab_config": "Configuration",
     "tab_info": "Informations",
     "tab_setup": "Instructions d'installation",
