--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Recuperare regioni in cui la funzionalità di &quot;di Pubblicare Waypionts&quot; è utilizzato",
+    "allowClientsToDefineRegionsWhitelist": "Recuperare solo dalla white list clienti (vuoto = recuperare da tutti i client)",
     "connection_info": "Impostazioni di connessione",
+    "creation": "Data di creazione",
     "delete": "eliminare",
+    "description": "Descrizione",
     "enabled": "abilitato",
     "encryptionKey": "Chiave di crittografia per la Crittografia Payload",
+    "lattitude": "Lattitude",
+    "locations_info": "Impostazioni di posizione",
+    "longitude": "Longitudine",
     "mqtt": "MQTT istanza",
     "name": "Utente",
     "picture": "Foto",
     "pictures_info": "Foto Utente",
+    "publishRegionsToClients": "Broadcast regioni ai clienti",
+    "radius": "Raggio",
     "tab_config": "Configurazione",
     "tab_info": "Informazioni",
     "tab_setup": "Istruzioni per l'installazione",
