--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Ophalen regio ' s als functionaliteit &quot;te Publiceren Waypionts&quot; wordt gebruikt",
+    "allowClientsToDefineRegionsWhitelist": "Alleen ophalen van de witte lijst clients (leeg = ophalen van alle klanten)",
     "connection_info": "Instellingen verbinding",
+    "creation": "Aanmaakdatum",
     "delete": "verwijderen",
+    "description": "Omschrijving",
     "enabled": "ingeschakeld",
     "encryptionKey": "Encryptie Sleutel voor Payload Encryption",
+    "lattitude": "Lattitude",
+    "locations_info": "Locatie-instellingen",
+    "longitude": "Lengtegraad",
     "mqtt": "MQTT exemplaar",
     "name": "Gebruiker",
     "picture": "Foto",
     "pictures_info": "Gebruikers Foto ' S",
+    "publishRegionsToClients": "Uitzending van regio ' s aan klanten",
+    "radius": "Straal",
     "tab_config": "Configuratie",
     "tab_info": "Informatie",
     "tab_setup": "Installatie-instructies",
