--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Wyodrębnić regiony, kiedy funkcjonalność i quot;opublikować Waypionts&quot; i używane",
+    "allowClientsToDefineRegionsWhitelist": "Tylko otrzymywać od klienta do białej listy (pusty = dostać od wszystkich klientów)",
     "connection_info": "Ustawienia połączenia ",
+    "creation": "Data utworzenia",
     "delete": "usunąć",
+    "description": "Opis",
     "enabled": "włączony",
     "encryptionKey": "Klucz do szyfrowania ładunku ",
+    "lattitude": "Szerokość geograficzna",
+    "locations_info": "Ustawienia lokalizacji ",
+    "longitude": "Długość geograficzna",
     "mqtt": "Egzemplarz protokołu MQTT ",
     "name": "Użytkownik",
     "picture": "Obraz",
     "pictures_info": "Zdjęcia Użytkownika ",
+    "publishRegionsToClients": "Nadawanie regiony do klientów",
+    "radius": "Promień",
     "tab_config": "Konfiguracji",
     "tab_info": "Informacje",
     "tab_setup": "Instrukcja instalacji ",
