--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Recuperar regiões quando a funcionalidade de &quot;Publicar Waypionts&quot; é usado",
+    "allowClientsToDefineRegionsWhitelist": "Recuperar somente a partir da lista de permissões de clientes (vazio = recuperar de todos os clientes)",
     "connection_info": "Configurações de conexão",
+    "creation": "Data de criação",
     "delete": "apagar",
+    "description": "Descrição",
     "enabled": "habilitado",
     "encryptionKey": "A criptografia de Chave para Criptografia de Carga útil",
+    "lattitude": "Lattitude",
+    "locations_info": "Definições de localização",
+    "longitude": "Longitude",
     "mqtt": "DICIONÁRIO de instância",
     "name": "Utilizador",
     "picture": "Imagem",
     "pictures_info": "Fotos Do Usuário",
+    "publishRegionsToClients": "Transmissão regiões de clientes",
+    "radius": "Raio",
     "tab_config": "Configuração",
     "tab_info": "Informações",
     "tab_setup": "Instruções de instalação",
