--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "Извлекать регионы, когда функциональность и quot;опубликовать Waypionts&quot; и используется",
+    "allowClientsToDefineRegionsWhitelist": "Только получать от клиентов в белый список (пустой = получить от всех клиентов)",
     "connection_info": "Параметры подключения ",
+    "creation": "Дата создания",
     "delete": "удалить",
+    "description": "Описание",
     "enabled": "включен",
     "encryptionKey": "Ключ шифрования для шифрования полезной нагрузки ",
+    "lattitude": "Lattitude",
+    "locations_info": "Настройки местоположения ",
+    "longitude": "Долгота",
     "mqtt": "Экземпляр протоколу MQTT ",
     "name": "Пользователь",
     "picture": "Картинка",
     "pictures_info": "Фотографии Пользователя ",
+    "publishRegionsToClients": "Вещание регионы к клиентам",
+    "radius": "Радиус",
     "tab_config": "Конфигурации",
     "tab_info": "Информация",
     "tab_setup": "Инструкция по установке ",
