--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,12 +1,21 @@
 {
+    "allowClientsToDefineRegions": "检索地区当的功能性和quot;发布Waypionts quot;使用",
+    "allowClientsToDefineRegionsWhitelist": "只是检索，从已列入白名单的客户(empty=检索所有客户)",
     "connection_info": "连接设置",
+    "creation": "创建日期",
     "delete": "删除",
+    "description": "描述",
     "enabled": "启用",
     "encryptionKey": "加密钥对于有效负荷加密",
+    "lattitude": "纬度",
+    "locations_info": "位置的设置",
+    "longitude": "经度",
     "mqtt": "过实例",
     "name": "用户",
     "picture": "图片",
     "pictures_info": "用户的照片",
+    "publishRegionsToClients": "广播地区的客户",
+    "radius": "半径",
     "tab_config": "配置",
     "tab_info": "的信息",
     "tab_setup": "设置说明",
