--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,43 +1,43 @@
 {
-    "Authentication:": "",
-    "Cannot read file!": "",
-    "Chained certificate:": "",
-    "Drop the files here": "",
-    "Empty name not allowed!": "",
-    "File is too big!": "",
-    "Let's Encrypt settings": "",
-    "Listen on all IPs": "",
-    "Ok": "",
-    "Port to check the domain:": "",
-    "Private certificate:": "",
-    "Public certificate:": "",
-    "Secure(HTTPS):": "",
-    "Server settings": "",
-    "Unknown file format!": "",
-    "Use Lets Encrypt certificates:": "",
-    "Use this instance for automatic update:": "",
-    "connection_info": "",
-    "delete": "",
-    "enabled": "",
-    "encryptionKey": "",
-    "help_tip": "",
-    "ip": "",
-    "name": "",
-    "other_info": "",
-    "passRepeat": "",
-    "password": "",
-    "picture": "",
-    "pictures_info": "",
-    "port": "",
-    "state": "",
-    "tab_config": "",
-    "tab_http": "",
-    "tab_info": "",
-    "tab_mqtt": "",
-    "tab_pictures": "",
-    "tab_setup": "",
-    "togglePassword": "",
-    "upload": "",
-    "username": "",
-    "webSocket": ""
+    "Authentication:": "验证",
+    "Cannot read file!": "无法读取文件！",
+    "Chained certificate:": "链式证书：",
+    "Drop the files here": "把文件放在这里",
+    "Empty name not allowed!": "不允许空名！",
+    "File is too big!": "文件太大！",
+    "Let's Encrypt settings": "让我们加密设置",
+    "Listen on all IPs": "监听所有 IP",
+    "Ok": "好的",
+    "Port to check the domain:": "检查域的端口：",
+    "Private certificate:": "私人证书：",
+    "Public certificate:": "公共证书：",
+    "Secure(HTTPS):": "安全（HTTPS）：",
+    "Server settings": "服务器设置",
+    "Unknown file format!": "未知文件格式！",
+    "Use Lets Encrypt certificates:": "使用 Let's Encrypt 证书：",
+    "Use this instance for automatic update:": "使用此实例进行自动更新：",
+    "connection_info": "连接设置",
+    "delete": "删除",
+    "enabled": "启用",
+    "encryptionKey": "有效载荷加密的加密密钥",
+    "help_tip": "保存后适配器立即使用新配置重新启动",
+    "ip": "IP地址",
+    "name": "用户",
+    "other_info": "其他设置",
+    "passRepeat": "密码（重复）",
+    "password": "密码",
+    "picture": "图片",
+    "pictures_info": "用户图片",
+    "port": "港口",
+    "state": "状态",
+    "tab_config": "配置",
+    "tab_http": "选项 1：ioBroker.cloud / iot（推荐）",
+    "tab_info": "信息",
+    "tab_mqtt": "选项 2：MQTT 服务器",
+    "tab_pictures": "用户图片",
+    "tab_setup": "设置说明",
+    "togglePassword": "显示/隐藏密码",
+    "upload": "上传",
+    "username": "用户",
+    "webSocket": "使用 Websocket"
 }
